// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HaulingRunDetail Component should match snapshot for SELLING run with P&L entries 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="w-full px-4 mt-8 mb-8"
  >
    <div
      class="flex items-center gap-4 mb-6"
    >
      <a
        href="/hauling"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left h-4 w-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
        Back
      </a>
      <h1
        class="text-2xl font-bold text-text-emphasis flex-1"
      >
        Jita to Amarr Run
      </h1>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium"
          style="background-color: var(--color-warning-tint); color: var(--color-manufacturing-amber);"
        >
          SELLING
        </span>
        <div
          class="min-w-[160px]"
        >
          <button
            aria-autocomplete="none"
            aria-controls="radix-_r_6l_"
            aria-expanded="false"
            class="flex w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-secondary text-xs h-8"
            data-placeholder=""
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              Change Status
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex gap-4 mb-6 flex-wrap"
    >
      <div
        class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all flex-1 min-w-[200px] bg-background-panel border-overlay-subtle"
      >
        <div
          class="p-6 pt-4"
        >
          <p
            class="text-sm text-text-secondary mb-1"
          >
            Route
          </p>
          <p
            class="text-lg font-semibold text-text-emphasis"
          >
            The Forge
             → 
            Domain
          </p>
        </div>
      </div>
      <div
        class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all flex-[2] min-w-[300px] bg-background-panel border-overlay-subtle"
      >
        <div
          class="p-6 pt-4"
        >
          <p
            class="text-sm text-text-secondary mb-2"
          >
            Capacity
          </p>
          <div
            class="flex items-center gap-4"
          >
            <div
              class="flex-1"
            >
              <div
                class="h-3 bg-background-elevated rounded-full overflow-hidden"
              >
                <div
                  class="h-full rounded-full transition-all"
                  style="width: 0.03333333333333333%; background-color: var(--color-manufacturing-amber);"
                />
              </div>
            </div>
            <p
              class="text-sm text-text-secondary min-w-[140px] text-right"
            >
              100.0
               / 
              300,000
               m³
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <h2
          class="text-lg font-semibold text-text-emphasis mb-3"
        >
          Route Safety
        </h2>
        <div
          class="flex gap-6 flex-wrap items-center"
        >
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Shortest Route
            </p>
            <p
              class="font-semibold text-text-emphasis"
            >
              1
               jumps (
              The Forge
               → 
              Domain
              )
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Source Region Kills (24h)
            </p>
            <p
              class="font-semibold"
              style="color: var(--color-success-teal);"
            >
              0
            </p>
          </div>
        </div>
        <p
          class="text-xs text-text-muted mt-2"
        >
          Data from EVE ESI and zKillboard
        </p>
      </div>
    </div>
    <div
      class="flex items-center justify-between mb-3"
    >
      <h2
        class="text-lg font-semibold text-text-emphasis"
      >
        Items
      </h2>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-8 rounded-sm px-3 text-xs"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add Item
      </button>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="overflow-x-auto"
      >
        <div
          class="relative w-full overflow-auto"
        >
          <table
            class="w-full caption-bottom text-sm"
          >
            <thead
              class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
            >
              <tr
                class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted bg-background-void border-overlay-subtle"
              >
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Item
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Buy Price
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Sell Price
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Net Profit/unit
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Planned Qty
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Acquired
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis w-36"
                >
                  Fill %
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Volume
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Actions
                </th>
              </tr>
            </thead>
            <tbody
              class="[&_tr:last-child]:border-0"
            >
              <tr
                class="border-b transition-colors data-[state=selected]:bg-muted border-overlay-subtle hover:bg-interactive-hover"
              >
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <img
                      alt="Tritanium"
                      height="24"
                      src="https://images.evetech.net/types/34/icon?size=32"
                      style="border-radius: 2px;"
                      width="24"
                    />
                    <span
                      class="text-sm font-semibold text-text-emphasis"
                    >
                      Tritanium
                    </span>
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  5.5 ISK
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  7 ISK
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right"
                >
                  <span
                    class="text-sm font-semibold"
                    style="color: var(--color-success-teal);"
                  >
                    1.5 ISK
                  </span>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  10,000
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  5,000
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      class="flex-1"
                    >
                      <div
                        class="h-1.5 bg-background-elevated rounded-full overflow-hidden"
                      >
                        <div
                          class="h-full rounded-full transition-all"
                          style="width: 50%; background-color: var(--color-primary-cyan);"
                        />
                      </div>
                    </div>
                    <span
                      class="text-xs text-text-secondary min-w-[36px] text-right"
                    >
                      50
                      %
                    </span>
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  100.0 m³
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex gap-1"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                      data-state="closed"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-pencil h-3.5 w-3.5"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                        />
                        <path
                          d="m15 5 4 4"
                        />
                      </svg>
                    </button>
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-7 w-7 text-rose-danger hover:text-rose-danger hover:bg-rose-danger/10"
                      data-state="closed"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trash2 lucide-trash-2 h-3.5 w-3.5"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 11v6"
                        />
                        <path
                          d="M14 11v6"
                        />
                        <path
                          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                        />
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                        />
                      </svg>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h2
            class="text-lg font-semibold text-text-emphasis"
          >
            Profit & Loss
          </h2>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-8 rounded-sm px-3 text-xs"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-4 w-4 mr-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Enter P&L
          </button>
        </div>
        <div
          class="overflow-x-auto mb-4"
        >
          <div
            class="relative w-full overflow-auto"
          >
            <table
              class="w-full caption-bottom text-sm"
            >
              <thead
                class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
              >
                <tr
                  class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted bg-background-void border-overlay-subtle"
                >
                  <th
                    class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                  >
                    Type
                  </th>
                  <th
                    class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                  >
                    Qty Sold
                  </th>
                  <th
                    class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                  >
                    Avg Sell Price
                  </th>
                  <th
                    class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                  >
                    Revenue
                  </th>
                  <th
                    class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                  >
                    Cost
                  </th>
                  <th
                    class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                  >
                    Net Profit
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                  >
                    Actions
                  </th>
                </tr>
              </thead>
              <tbody
                class="[&_tr:last-child]:border-0"
              >
                <tr
                  class="border-b transition-colors data-[state=selected]:bg-muted border-overlay-subtle hover:bg-interactive-hover"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-sm text-text-emphasis"
                  >
                    Tritanium
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                  >
                    5,000
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                  >
                    7.2 ISK
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm"
                    style="color: var(--color-success-teal);"
                  >
                    36.00K ISK
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm"
                    style="color: var(--color-danger-rose);"
                  >
                    27.50K ISK
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right"
                  >
                    <span
                      class="text-sm font-semibold"
                      style="color: var(--color-success-teal);"
                    >
                      8.50K ISK
                    </span>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                      data-state="closed"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-pencil h-3.5 w-3.5"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                        />
                        <path
                          d="m15 5 4 4"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="flex gap-6 flex-wrap mt-2"
        >
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Total Revenue
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-success-teal);"
            >
              36.00K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Total Cost
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-danger-rose);"
            >
              27.50K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Net Profit
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-success-teal);"
            >
              8.50K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Margin %
            </p>
            <p
              class="text-lg font-semibold text-text-emphasis"
            >
              23.6
              %
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Items Sold
            </p>
            <p
              class="text-lg font-semibold text-text-emphasis"
            >
              1
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Items Pending
            </p>
            <p
              class="text-lg font-semibold text-text-emphasis"
            >
              0
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <h2
          class="text-lg font-semibold text-text-emphasis mb-2"
        >
          Run Summary
        </h2>
        <div
          class="shrink-0 h-[1px] w-full mb-4 bg-overlay-subtle"
          data-orientation="horizontal"
          role="none"
        />
        <div
          class="flex gap-6 flex-wrap"
        >
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Total ISK Outlay
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-danger-rose);"
            >
              55.00K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Total ISK Revenue
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-success-teal);"
            >
              70.00K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Net Profit
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-success-teal);"
            >
              15.00K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Fill % Overall
            </p>
            <p
              class="text-lg font-semibold text-text-emphasis"
            >
              50.0
              %
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HaulingRunDetail Component should match snapshot with planning run 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="w-full px-4 mt-8 mb-8"
  >
    <div
      class="flex items-center gap-4 mb-6"
    >
      <a
        href="/hauling"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left h-4 w-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
        Back
      </a>
      <h1
        class="text-2xl font-bold text-text-emphasis flex-1"
      >
        Jita to Amarr Run
      </h1>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium"
          style="background-color: var(--color-info-tint); color: var(--color-primary-cyan);"
        >
          PLANNING
        </span>
        <div
          class="min-w-[160px]"
        >
          <button
            aria-autocomplete="none"
            aria-controls="radix-_r_0_"
            aria-expanded="false"
            class="flex w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-secondary text-xs h-8"
            data-placeholder=""
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              Change Status
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex gap-4 mb-6 flex-wrap"
    >
      <div
        class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all flex-1 min-w-[200px] bg-background-panel border-overlay-subtle"
      >
        <div
          class="p-6 pt-4"
        >
          <p
            class="text-sm text-text-secondary mb-1"
          >
            Route
          </p>
          <p
            class="text-lg font-semibold text-text-emphasis"
          >
            The Forge
             → 
            Domain
          </p>
        </div>
      </div>
      <div
        class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all flex-[2] min-w-[300px] bg-background-panel border-overlay-subtle"
      >
        <div
          class="p-6 pt-4"
        >
          <p
            class="text-sm text-text-secondary mb-2"
          >
            Capacity
          </p>
          <div
            class="flex items-center gap-4"
          >
            <div
              class="flex-1"
            >
              <div
                class="h-3 bg-background-elevated rounded-full overflow-hidden"
              >
                <div
                  class="h-full rounded-full transition-all"
                  style="width: 0.03333333333333333%; background-color: var(--color-manufacturing-amber);"
                />
              </div>
            </div>
            <p
              class="text-sm text-text-secondary min-w-[140px] text-right"
            >
              100.0
               / 
              300,000
               m³
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <h2
          class="text-lg font-semibold text-text-emphasis mb-3"
        >
          Route Safety
        </h2>
        <div
          class="flex gap-6 flex-wrap items-center"
        >
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Shortest Route
            </p>
            <p
              class="font-semibold text-text-emphasis"
            >
              1
               jumps (
              The Forge
               → 
              Domain
              )
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Source Region Kills (24h)
            </p>
            <p
              class="font-semibold"
              style="color: var(--color-success-teal);"
            >
              0
            </p>
          </div>
        </div>
        <p
          class="text-xs text-text-muted mt-2"
        >
          Data from EVE ESI and zKillboard
        </p>
      </div>
    </div>
    <div
      class="flex items-center justify-between mb-3"
    >
      <h2
        class="text-lg font-semibold text-text-emphasis"
      >
        Items
      </h2>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-8 rounded-sm px-3 text-xs"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add Item
      </button>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="overflow-x-auto"
      >
        <div
          class="relative w-full overflow-auto"
        >
          <table
            class="w-full caption-bottom text-sm"
          >
            <thead
              class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
            >
              <tr
                class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted bg-background-void border-overlay-subtle"
              >
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Item
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Buy Price
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Sell Price
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Net Profit/unit
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Planned Qty
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Acquired
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis w-36"
                >
                  Fill %
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Volume
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Actions
                </th>
              </tr>
            </thead>
            <tbody
              class="[&_tr:last-child]:border-0"
            >
              <tr
                class="border-b transition-colors data-[state=selected]:bg-muted border-overlay-subtle hover:bg-interactive-hover"
              >
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <img
                      alt="Tritanium"
                      height="24"
                      src="https://images.evetech.net/types/34/icon?size=32"
                      style="border-radius: 2px;"
                      width="24"
                    />
                    <span
                      class="text-sm font-semibold text-text-emphasis"
                    >
                      Tritanium
                    </span>
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  5.5 ISK
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  7 ISK
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right"
                >
                  <span
                    class="text-sm font-semibold"
                    style="color: var(--color-success-teal);"
                  >
                    1.5 ISK
                  </span>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  10,000
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  5,000
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      class="flex-1"
                    >
                      <div
                        class="h-1.5 bg-background-elevated rounded-full overflow-hidden"
                      >
                        <div
                          class="h-full rounded-full transition-all"
                          style="width: 50%; background-color: var(--color-primary-cyan);"
                        />
                      </div>
                    </div>
                    <span
                      class="text-xs text-text-secondary min-w-[36px] text-right"
                    >
                      50
                      %
                    </span>
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  100.0 m³
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex gap-1"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-7 w-7 text-text-secondary hover:text-text-emphasis"
                      data-state="closed"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-pencil h-3.5 w-3.5"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                        />
                        <path
                          d="m15 5 4 4"
                        />
                      </svg>
                    </button>
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-7 w-7 text-rose-danger hover:text-rose-danger hover:bg-rose-danger/10"
                      data-state="closed"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trash2 lucide-trash-2 h-3.5 w-3.5"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 11v6"
                        />
                        <path
                          d="M14 11v6"
                        />
                        <path
                          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                        />
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                        />
                      </svg>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <h2
          class="text-lg font-semibold text-text-emphasis mb-2"
        >
          Run Summary
        </h2>
        <div
          class="shrink-0 h-[1px] w-full mb-4 bg-overlay-subtle"
          data-orientation="horizontal"
          role="none"
        />
        <div
          class="flex gap-6 flex-wrap"
        >
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Total ISK Outlay
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-danger-rose);"
            >
              55.00K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Total ISK Revenue
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-success-teal);"
            >
              70.00K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Net Profit
            </p>
            <p
              class="text-lg font-semibold"
              style="color: var(--color-success-teal);"
            >
              15.00K ISK
            </p>
          </div>
          <div>
            <p
              class="text-sm text-text-secondary"
            >
              Fill % Overall
            </p>
            <p
              class="text-lg font-semibold text-text-emphasis"
            >
              50.0
              %
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
